--- a/lmk/Dockerfile
+++ b/lmk/Dockerfile
@@ -9,4 +9,4 @@ ADD requirements.txt /app/requirements.txt
 RUN /env/bin/pip install --upgrade pip && /env/bin/pip install -r /app/requirements.txt
 ADD . /app
 
-CMD gunicorn -b :$PORT lmk.wsgi
+CMD gunicorn -b 0.0.0.0:8080 lmk.wsgi
