--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,3 +55,13 @@ jobs:
       - store_artifacts:
           path: test-reports
           destination: test-reports
+
+  deploy:
+      docker:
+        - image: google/cloud-sdk
+      steps:
+        - run: |
+            echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
+            gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
+            gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
+            ./deploy.sh
