--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,33 +6,19 @@ version: 2
 jobs:
   build:
     docker:
-      # specify the version you desire here
-      # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
       - image: circleci/python:3.6.1
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-    working_directory: ~/repo
+    working_directory: ~/repo/lmk
     steps:
       - checkout
       - run:
           name: install dependencies
           command: |
-            cd lmk
             python3 -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
-      # run tests!
-      # this example uses Django's built-in test-runner
-      # other common Python testing frameworks include pytest and nose
-      # https://pytest.org
-      # https://nose.readthedocs.io
       - run:
           name: run tests
           command: |
-            cd lmk
             . venv/bin/activate
             python manage.py test
 
@@ -40,11 +26,11 @@ jobs:
           path: test-reports
           destination: test-reports
   deploy:
-      docker:
-        - image: google/cloud-sdk
-      steps:
-        - run: |
-            echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
-            gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
-            gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
-            ./deploy.sh
+    docker:
+     - image: google/cloud-sdk
+    steps:
+      - run: |
+        echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
+        gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
+        gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
+        ./deploy.sh
