--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,12 +13,14 @@ jobs:
       - run:
           name: install dependencies
           command: |
+            cd lmk
             python3 -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
       - run:
           name: run tests
           command: |
+            cd lmk
             . venv/bin/activate
             python manage.py test
 
