Trying to figure out multiple jobs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,3 +36,11 @@ jobs:
           gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
           gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
           ./deploy.sh
+
+
+workflows:
+  version: 2
+  workflow:
+    jobs:
+      - build
+      - deploy
