--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
       - image: circleci/python:3.6.1
-    working_directory: ~/repo/lmk
+    working_directory: ~/repo
     steps:
       - checkout
       - run:
@@ -23,19 +23,27 @@ jobs:
             cd lmk
             . venv/bin/activate
             python manage.py test
-
-      - store_artifacts:
-          path: test-reports
-          destination: test-reports
   deploy:
     docker:
      - image: google/cloud-sdk
+    working_directory: ~/repo
     steps:
-      - run: |
-          echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
-          gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
-          gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
-          ./deploy.sh
+      - checkout
+      - run:
+          name: install dependencies
+          command: |
+            cd lmk
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+
+      - run:
+          name: deploy to gcp
+          command: |
+            echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
+            gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
+            gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
+            ./deploy.sh
 
 
 workflows:
