Trying to figure out deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
       - run:
           name: rsync static files
           command: |
-            gsutil rsync -rm lmk/static/ gs://lmk-static/static
+            gsutil rsync -r lmk/static/ gs://lmk-static/static
       - setup_remote_docker
       - run:
           name: build and push docker image
